# guboot-svn

trunk/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure  configure.in
trunk/autom4te.cache/: output.1  requests  traces.0  traces.1
trunk/doc/: Makefile  Makefile.am  Makefile.in
trunk/src/: Makefile  Makefile.am  Makefile.in  config.h  devices.c  devices.h  guboot  guboot.c  guboot.h  gui.c  gui.h  main.c
trunk/src/.deps/: devices.Po  guboot.Po  gui.Po  main.Po
trunk/src/bk/: Makefile.am
trunk/src/data/: Makefile  Makefile.am  Makefile.in  guboot.desktop  guboot.glade  guboot.ui
