# Init
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(guboot, 0.1)
AM_CONFIG_HEADER(src/config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

# Checks for libraries
PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

PKG_CHECK_MODULES(GLADE, libglade-2.0)
AC_SUBST(GLADE_LIBS)
AC_SUBST(GLADE_CFLAGS)

PKG_CHECK_MODULES(GIO, gio-2.0)
AC_SUBST(GIO_LIBS)
AC_SUBST(GIO_CFLAGS)

# Makefile output
AC_OUTPUT([ Makefile \
			doc/Makefile \
			src/bk/Makefile \
			src/data/Makefile \
			src/Makefile ])

# Nette Ausgabe
AC_MSG_RESULT([
*******************************************************
*  $PACKAGE $VERSION:  Automatic configuration OK.
*
*  Installation directories:
*     Program: ................. ${prefix}/bin
*
*  Type 'make' to compile $PACKAGE.
*******************************************************
])  
