# App Data
sharedir = $(prefix)/share/guboot
share_DATA = guboot.ui

# App Icon
pixmapdir = $(prefix)/share/pixmaps
pixmap_DATA = guboot.png

# Desktop Menu Entry
desktopdir = $(prefix)/share/applications
desktop_DATA = guboot.desktop

EXTRA_DIST = $(share_DATA) \
			 $(pixmap_DATA) \
			 $(desktop_DATA)
